<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/responseTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responseTop"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioResponseGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/veryInterested"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/very_interested" />

            <RadioButton
                android:id="@+id/followUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/interested_needs_follow_up" />

            <RadioButton
                android:id="@+id/notInterested"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_interested" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CommentstextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/comments">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/salesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_done"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_10"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/yes"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no"
                android:layout_weight="1"/>

        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>