<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vconnectapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_status"
        android:name="com.vconnectapp.ui.mystatus.MyStatusFragment"
        android:label="@string/menu_my_status"
        tools:layout="@layout/fragment_my_status" />

    <fragment
        android:id="@+id/nav_visits"
        android:name="com.vconnectapp.ui.visits.VisitsFragment"
        android:label="@string/menu_visits"
        tools:layout="@layout/fragment_visits" />
</navigation>