<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            style="?attr/materialButtonOutlinedStyle"
            />
        <View
            android:id="@+id/line_first"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/grey_10" />
        <TextView
            android:id="@+id/selfieTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_selfie"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/captureButton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:text="@string/selfie_plus"
            android:textSize="30sp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_gravity="center"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>