<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <TextView
            android:id="@+id/mobile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin1x"
            android:layout_marginEnd="@dimen/margin1x"
            android:hint="@string/phone_number_hint"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_title" />

        <CheckBox
            android:id="@+id/privacy_policy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin1x"
            app:layout_constraintBottom_toBottomOf="@id/privacy_policy_text"
            app:layout_constraintEnd_toStartOf="@id/privacy_policy_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_edit_text" />

        <TextView
            android:id="@+id/privacy_policy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_privacy_policy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/privacy_policy_checkbox"
            app:layout_constraintTop_toBottomOf="@id/phone_number_edit_text" />

        <TextView
            android:id="@+id/checkbox_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin1x"
            android:text="@string/checkbox_unchecked_error_msg"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_policy_checkbox"
            tools:visibility="visible" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin1x"
            android:backgroundTint="@color/teal_200"
            android:text="@string/next_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_error_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>