<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/productContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ledCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/led" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ledQuantity"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/quantity"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cctvCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cctv" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cctvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/quantity"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/projCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/projector" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="0.5"
                    android:hint="@string/quantity"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1" />
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_name_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/customer_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customer_number_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_number_hint"
            app:layout_constraintTop_toBottomOf="@+id/customer_name_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>